--- a/Phonebook.KamilKolanowski/Phonebook.KamilKolanowski.csproj
+++ b/Phonebook.KamilKolanowski/Phonebook.KamilKolanowski.csproj
@@ -17,6 +17,7 @@
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0-preview.3.25171.5" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
       <PackageReference Include="Spectre.Console" Version="0.50.0" />
     </ItemGroup>
