--- a/Phonebook.KamilKolanowski/appsettings.json
+++ b/Phonebook.KamilKolanowski/appsettings.json
@@ -1,5 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=PhoneBook;User Id=sa;Password=dockerStrongPwd123;Encrypt=False;TrustServerCertificate=True;"
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "UseSsl": false,
+    "Username": "your_mail@gmail.com",
+    "Password": "your_password@gmail.com"
   }
 }
