--- a/Phonebook.KamilKolanowski/appsettings.json
+++ b/Phonebook.KamilKolanowski/appsettings.json
@@ -6,7 +6,7 @@
     "Host": "smtp.gmail.com",
     "Port": 587,
     "UseSsl": false,
-    "Username": "your_mail@gmail.com",
-    "Password": "your_password@gmail.com"
+    "Username": "email@gmail.com",
+    "Password": "app_password"
   }
 }
