create messageController, add sms service, clean code

--- a/Phonebook.KamilKolanowski/appsettings.json
+++ b/Phonebook.KamilKolanowski/appsettings.json
@@ -8,5 +8,10 @@
     "UseSsl": false,
     "Username": "email@gmail.com",
     "Password": "app_password"
+  },
+  "SmsService": {
+    "Sid": "<your_sid>",
+    "Token": "<your_token>",
+    "VirtualNumber": "<your_virtual_number>"
   }
 }
