--- a/Phonebook.KamilKolanowski/Phonebook.KamilKolanowski.csproj
+++ b/Phonebook.KamilKolanowski/Phonebook.KamilKolanowski.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0-preview.3.25171.5" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
       <PackageReference Include="Spectre.Console" Version="0.50.0" />
+      <PackageReference Include="Twilio" Version="7.11.0" />
     </ItemGroup>
 
     <ItemGroup>
